<resources>
    <string name="app_name">MediaPlayer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首頁</string>
    <string name="slash">/</string>
    <string name="rewind_10_seconds">Rewind 10 seconds</string>
    <string name="fast_forward_10_seconds">Fast forward 10 seconds</string>
    <string name="play_video">Play video</string>
    <string name="pause_video">Pause video</string>
    <string name="close_player">Close player</string>
    <string name="timebar_of_video">TimeBar of video</string>
    <string name="previous_video">Previous video</string>
    <string name="next_video">Next video</string>
</resources>